# fwaun-tools

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.ja.md  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
crates/booru/: Cargo.toml
crates/booru/src/: lib.rs
crates/captioner/: Cargo.toml
crates/captioner/src/: lib.rs  onnx.rs  openai.rs
crates/cli/: Cargo.toml  LICENSE-APACHE
crates/cli/src/: main.rs  model.rs
crates/comfyui/: Cargo.toml
crates/comfyui/src/: client.rs  lib.rs  upscale.rs
crates/core/: Cargo.toml  LICENSE-MIT  anima-tagger.toml.example  fwaun-tagger.toml.example  fwaun-tools.toml.example
crates/core/src/: config.rs  export.rs  hub.rs  lib.rs  sidecar.rs  tag_group.rs
crates/core/src/model/: lora.rs  merge.rs  mod.rs  progress.rs  quant.rs  safetensors.rs
crates/fwaun-model-tools/: Cargo.toml  README.md
crates/fwaun-model-tools/src/: lora.rs  main.rs  merge.rs  quant.rs  safetensors.rs
crates/gui/: Cargo.toml  Dioxus.toml
crates/gui/assets/: README.md
crates/gui/src/: config_ui.rs  i18n.rs  main.rs  model_ui.rs
crates/tagger/: Cargo.toml
crates/tagger/src/: lib.rs
examples/: anima-tagger.toml
