[workspace]
resolver = "3"
members = ["crates/core", "crates/tagger", "crates/captioner", "crates/booru", "crates/cli", "crates/gui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["fwaunstp <fwaunstp@proton.me>"]
repository = "https://github.com/fwaunstp/anima-tagger"
homepage = "https://github.com/fwaunstp/anima-tagger"
readme = "README.md"
keywords = ["stable-diffusion", "lora", "tagging", "captioning", "dataset"]

[workspace.dependencies]
anima-tagger-core = { path = "crates/core", version = "0.1.0" }
anima-tagger-tagger = { path = "crates/tagger", version = "0.1.0" }
anima-tagger-captioner = { path = "crates/captioner", version = "0.1.0" }
anima-tagger-booru = { path = "crates/booru", version = "0.1.0" }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ureq = { version = "2", features = ["json"] }
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
toml = "0.8"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
walkdir = "2"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp"] }
base64 = "0.22"
serde_json = "1"
csv = "1.3"
ndarray = "0.16"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "download-binaries", "tls-rustls"] }
hf-hub = { version = "0.5", default-features = false, features = ["ureq"] }

[profile.release]
lto = "thin"
codegen-units = 1
