[package]
name = "fwaun-tools-booru"
description = "Danbooru-API tag fetcher used by fwaun-tools to enrich sidecars with human-curated booru tags."
categories = ["api-bindings"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
fwaun-tools-core = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
md5 = { workspace = true }
