[package]
name = "fwaun-tools-captioner"
description = "Qwen3-VL ONNX image captioner used by fwaun-tools, with an OpenAI-compatible HTTP backend as an alternative."
categories = ["computer-vision"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
fwaun-tools-core = { workspace = true }
ort = { workspace = true, optional = true }
image = { workspace = true }
tokenizers = { workspace = true, optional = true }
thiserror = { workspace = true }
ureq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

[features]
default = []
# Local Qwen3-VL ONNX captioning. Off by default (the "light" build): pulls
# in ort's prebuilt ONNX Runtime, which raises the glibc floor to 2.38+. The
# OpenAI-compatible HTTP backend stays available in both builds.
onnx = ["dep:ort", "dep:tokenizers"]
