[package]
name = "fwaun-tagger-cli"
description = "Command-line interface for fwaun-tagger: tag, caption, and export Stable Diffusion LoRA datasets."
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[[bin]]
name = "fwaun-tagger"
path = "src/main.rs"

[features]
default = []
# Local ONNX inference (WD14 tagger + Qwen3-VL captioner). Off by default
# (the portable "light" build). Enabling it pulls in ort's prebuilt ONNX
# Runtime and raises the glibc floor to 2.38+.
full = ["fwaun-tagger-tagger/onnx", "fwaun-tagger-captioner/onnx"]

[dependencies]
fwaun-tagger-core = { workspace = true }
fwaun-tagger-tagger = { workspace = true }
fwaun-tagger-captioner = { workspace = true }
fwaun-tagger-booru = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokenizers = { workspace = true }
serde_json = "1"
