[package]
name = "fwaun-tools-cli"
description = "Command-line interface for fwaun-tools: tag, caption, and export Stable Diffusion LoRA datasets."
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[[bin]]
name = "fwaun-tools"
path = "src/main.rs"

[features]
default = []
# Local ONNX inference (WD14 tagger + Qwen3-VL captioner). Off by default
# (the portable "light" build). Enabling it pulls in ort's prebuilt ONNX
# Runtime and raises the glibc floor to 2.38+.
full = ["fwaun-tools-tagger/onnx", "fwaun-tools-captioner/onnx"]

[dependencies]
# `model` gives the checkpoint subcommands (merge-diff/extract-lora/quant-int8).
# Always on: pure-Rust/CPU, no glibc floor, so it ships in the light build too.
fwaun-tools-core = { workspace = true, features = ["model"] }
fwaun-tools-tagger = { workspace = true }
fwaun-tools-captioner = { workspace = true }
fwaun-tools-booru = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokenizers = { workspace = true }
serde_json = "1"
