[package]
name = "fwaun-tools-comfyui"
description = "Client for an existing ComfyUI server's HTTP API (upload / prompt / history / view / object_info), plus batch helpers such as image upscaling, used by fwaun-tools."
categories = ["api-bindings", "multimedia::images"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
image = { workspace = true }
