[package]
name = "fwaun-tools-core"
description = "Data model, project config, and sidecar I/O for fwaun-tools — a tag/caption editor for local Stable Diffusion LoRA datasets."
categories = ["data-structures", "filesystem"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
serde = { workspace = true }
ron = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
rand = { workspace = true }
hf-hub = { workspace = true }
# `model` feature only (diffusion checkpoint tooling)
anyhow = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
half = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
# Diffusion-checkpoint utilities (safetensors merge-diff / extract-lora /
# quant-int8), exposed as the `model` module. Pure-Rust/CPU, no glibc floor —
# safe to enable in light builds. Consumed by the CLI's `model` subcommands
# (and, in future, a GUI tab).
model = ["dep:anyhow", "dep:memmap2", "dep:half", "dep:rayon", "dep:regex", "dep:serde_json"]
