[package]
name = "fwaun-tagger-gui"
description = "Desktop GUI for fwaun-tagger: curate Stable Diffusion LoRA datasets with an integrated tag/caption editor."
categories = ["gui"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[[bin]]
name = "fwaun-tagger-gui"
path = "src/main.rs"

[dependencies]
fwaun-tagger-core = { workspace = true }
fwaun-tagger-tagger = { workspace = true }
fwaun-tagger-captioner = { workspace = true }
fwaun-tagger-booru = { workspace = true }
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = { version = "0.32" }
egui_extras = { version = "0.32", features = ["image"] }
serde = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rfd = "0.15"
image = { workspace = true }
toml = { workspace = true }
sys-locale = "0.3"
