[package]
name = "fwaun-tools-gui"
description = "Desktop GUI for fwaun-tools: curate Stable Diffusion LoRA datasets with an integrated tag/caption editor."
categories = ["gui"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[[bin]]
name = "fwaun-tools-gui"
path = "src/main.rs"

[features]
default = []
# Local ONNX inference (WD14 tagger + Qwen3-VL captioner). Off by default
# (the portable "light" build). Enabling it pulls in ort's prebuilt ONNX
# Runtime and raises the glibc floor to 2.38+.
full = ["fwaun-tools-tagger/onnx", "fwaun-tools-captioner/onnx"]

[dependencies]
# `model` gives the checkpoint tools tab (merge-diff / extract-lora /
# quant-int8). Pure-Rust/CPU, no glibc floor — safe in the light build.
fwaun-tools-core = { workspace = true, features = ["model"] }
fwaun-tools-tagger = { workspace = true }
fwaun-tools-captioner = { workspace = true }
fwaun-tools-booru = { workspace = true }
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = { version = "0.32" }
egui_extras = { version = "0.32", features = ["image"] }
serde = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rfd = "0.15"
image = { workspace = true }
toml = { workspace = true }
sys-locale = "0.3"
dirs = "6"
