[package]
name = "anima-tagger-tagger"
description = "WD14-family ONNX image tagger used by anima-tagger."
categories = ["computer-vision"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
anima-tagger-core = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }
image = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
