[package]
name = "fwaun-tagger-tagger"
description = "WD14-family ONNX image tagger used by fwaun-tagger."
categories = ["computer-vision"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
fwaun-tagger-core = { workspace = true }
ort = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
image = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
# Local WD14 ONNX inference. Off by default (the "light" build): pulls in
# ort's prebuilt ONNX Runtime, which raises the glibc floor to 2.38+.
onnx = ["dep:ort", "dep:ndarray"]
